/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.google.protobuf' version '0.8.18'
    id 'idea'
    id 'jvm-test-suite'
}

def protoVer = '3.25.1'
def grpcVer = '1.59.1'
def luceneVer = '9.9.0'
def lombokVer = '1.18.30'
def guiceVer = '7.0.0'
def autoServiceVer = '1.1.1'

repositories {
/*    mavenLocal()*/
    mavenCentral()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}


dependencies {
    implementation "com.google.protobuf:protobuf-java:${protoVer}"
    implementation "com.google.protobuf:protobuf-java-util:${protoVer}"
    implementation "org.apache.lucene:lucene-core:${luceneVer}"
    implementation "com.google.inject:guice:${guiceVer}"
    annotationProcessor "org.projectlombok:lombok:${lombokVer}"
    compileOnly "org.projectlombok:lombok:${lombokVer}"
    implementation "io.grpc:grpc-protobuf:${grpcVer}"
    implementation "io.grpc:grpc-netty:${grpcVer}"
    implementation "io.grpc:grpc-services:${grpcVer}"

    implementation "org.apache.lucene:lucene-core:${luceneVer}"
    implementation "org.apache.lucene:lucene-analysis-common:${luceneVer}"
    implementation "org.apache.lucene:lucene-queryparser:${luceneVer}"
    implementation "org.apache.lucene:lucene-queries:${luceneVer}"
    implementation "org.apache.lucene:lucene-highlighter:${luceneVer}"
    implementation "org.apache.lucene:lucene-memory:${luceneVer}"
    implementation "org.apache.lucene:lucene-expressions:${luceneVer}"
    implementation "org.apache.lucene:lucene-facet:${luceneVer}"
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'

    implementation "com.google.auto.service:auto-service:${autoServiceVer}"
    annotationProcessor "com.google.auto.service:auto-service:${autoServiceVer}"
}

test {
    useJUnitPlatform()
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protoVer}"
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.59.1'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

tasks.withType(JavaExec) {
    jvmArgs = ['--add-modules', 'jdk.incubator.vector']
}

compileJava {
    options.compilerArgs = ["--release", "21", "--enable-preview"]
}

group = 'com.jigyasa.search'
version = '1.0-SNAPSHOT'
description = 'Jigyasa'

java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
